# ibus-panel-extensions

./: Makefile.am  README  README.markdown  autogen.sh  configure.ac
charmap/: Makefile.am  org.freedesktop.ibus.charmap.gtk.gschema.xml.in  org.freedesktop.ibus.engines.charmap.gschema.xml.in
charmap/engine/: Makefile.am  engine-main.vala  engine.vala  ibus-charmap-preferences.ui  key-capture-dialog.vala  setup-main.vala  setup.vala
charmap/ibus/: Makefile.am  ibus-charmap.deps  ibus-charmap.pc.in  ibuscharmap.vala
charmap/python/: Makefile.am
charmap/python/ibus/: charmap.py
charmap/service/: Makefile.am  charmap-panel.vala  search-panel.vala  service-gtk-main.vala  service-gtk.vala  service.vala
charmap/tools/: Makefile.am  gen-index.vala
common/: Makefile.am
common/ibus/: Makefile.am  ibus-panel-extensions.pc.in  ibuspanelextension.vala  ibuspanelextensions.h  ibuspanelextensionsenumtypes.vala
docs/: Makefile.am  ibus-panel-extensions-docs.xml
drawing/: Makefile.am
drawing/engine/: Makefile.am  drawing.xml.in.in  engine-main.vala  engine.vala
drawing/ibus/: Makefile.am  ibus-drawing.deps  ibusdrawing.vala
drawing/python/: Makefile.am
drawing/python/ibus/: drawing.py
drawing/service/: Makefile.am  drawing-panel.vala  gtkdrawing.xml.in.in  service-gtk-main.vala  service-gtk.vala  service.vala
po/: POTFILES.in
private/: Makefile.am  selectable.vala  window-placement.vala
vapi/: Makefile.am  config.vapi  gucharmap-2.90.vapi  ibus-1.0.vapi
virtkbd/: Makefile.am
virtkbd/engine/: Makefile.am  engine-main.vala  engine.vala  virtkbd.xml.in.in
virtkbd/ibus/: Makefile.am  ibus-virtkbd.pc.in  ibusvirtkbd.vala
virtkbd/python/: Makefile.am
virtkbd/python/ibus/: virtkbd.py
virtkbd/service/: Makefile.am  gtkvirtkbd.xml.in.in  service-gtk-main.vala  service-gtk.vala  service.vala  virtkbd-panel.vala
